--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,13 +2,16 @@
 
 export(concoct_directory)
 export(download_all)
+export(download_files)
 export(get_admin_sheet)
 export(get_all_file_links)
 export(get_config)
 export(get_data)
 export(get_dictionary)
 export(get_node_url)
-export(login_to_osf)
+export(get_osf_pat)
 export(move)
 export(move_to_projects)
 export(move_waterbutler)
+export(upload_files)
+export(upload_revisions)
