--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(get_config)
 export(get_data)
 export(get_dictionary)
 export(get_node_url)
+export(get_nodes)
 export(get_osf_pat)
 export(move)
 export(move_to_projects)
