add function move_to_hist

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(get_node_url)
 export(get_nodes)
 export(get_osf_pat)
 export(move)
+export(move_to_hist)
 export(move_to_projects)
 export(move_waterbutler)
 export(upload_files)
