added a bunch of helper functions for the anova_models function to modularize it.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(clean_labresults)
 export(clean_nir)
 export(clean_potato)
 export(clean_specgrav)
+export(compose_data)
 export(concoct_directory)
 export(download_all_files)
 export(download_files)
